@@ -26,6 +26,7 @@ export(plotAbs)
 export(plotBestNormal)
 export(poolCoverage)
 export(predictSomatic)
+export(preprocessIntervals)
 export(readCoverageFile)
 export(readCurationFile)
 export(runAbsoluteCN)
