@@ -10,16 +10,16 @@ option_list <- list(
         default = NULL,
         help = "Infile specifying target (baits) intervals. Needs to be parsable by rtracklayer."),
     make_option(c("--offtarget"), action = "store_true",
-        default = formals(PureCN::calculateGCContentByInterval)$off.target, 
+        default = formals(PureCN::preprocessIntervals)$off.target, 
         help = "Include off-target regions [default %default]"),
     make_option(c("--targetwidth"), action = "store", type = "integer",
-        default=formals(PureCN::calculateGCContentByInterval)$average.target.width, 
+        default=formals(PureCN::preprocessIntervals)$average.target.width, 
         help = "Split large targets to approximately that size [default %default]"),
     make_option(c("--offtargetwidth"), action = "store", type = "integer",
-        default = formals(PureCN::calculateGCContentByInterval)$average.off.target.width, 
+        default = formals(PureCN::preprocessIntervals)$average.off.target.width, 
         help = "Bin off-target regions to approximately that size [default %default]"),
     make_option(c("--offtargetseqlevels"), action = "store", type = "character",
-        default=formals(PureCN::calculateGCContentByInterval)$off.target.seqlevels[[2]], 
+        default=formals(PureCN::preprocessIntervals)$off.target.seqlevels[[2]], 
         help = "Controls how to deal with chromosomes/contigs not found in infile. One of targeted, all [default %default]"),
     make_option(c("--mappability"), action = "store", type = "character", 
         help = "File parsable by rtracklayer specifying mappability scores of genomic regions."),
@@ -110,7 +110,7 @@ if (!opt$offtarget) {
      " Amplicon data. Add --offtarget to include them.")
 }
 
-outGC <- calculateGCContentByInterval(intervals, reference.file, 
+outGC <- preprocessIntervals(intervals, reference.file, 
     output.file = outfile, off.target = opt$offtarget, 
     mappability = mappability, average.off.target.width = opt$offtargetwidth,
     reptiming = reptiming, off.target.seqlevels = opt$offtargetseqlevels,
