@@ -11,6 +11,6 @@
   The following functions are deprecated and will be made defunct; use
   the replacement indicated below:
   \itemize{
-    \item{none}
+    \item{calculateGCContentByInterval: \code{\link{preprocessIntervals}}}
   }
 }
