@@ -227,9 +227,8 @@ are sequencing errors).}
 \item{gc.gene.file}{A mapping file that assigns GC content and gene symbols
 to each exon in the coverage files. Used for generating gene-level calls.
 First column in format CHR:START-END. Second column GC content (0 to 1).
-Third column gene symbol. This file can be generated with the \sQuote{GATK
-GCContentByInterval} tool or with the
-\code{\link{calculateGCContentByInterval}} function.}
+Third column gene symbol. This file is generated with the
+\code{\link{preprocessIntervals}} function.}
 
 \item{max.dropout}{Measures GC bias as ratio of coverage in AT-rich (GC <
 0.5) versus GC-rich on-target regions (GC >= 0.5). High drop-out might 
