@@ -132,7 +132,7 @@ reads can be used by the segmentation function.
 It further annotates targets by GC-content (how coverage is normalized is
 described later in Section~\ref{secgcbias}). 
 
-\Biocpkg{PureCN} provides the \Rfunction{calculateGCContentByInterval} 
+\Biocpkg{PureCN} provides the \Rfunction{preprocessIntervals} 
 function:
 
 <<examplegc>>=
@@ -146,7 +146,7 @@ mappability.file <- system.file("extdata", "ex2_mappability.bigWig",
 intervals <- import(bed.file)
 mappability <- import(mappability.file)
 
-calculateGCContentByInterval(intervals, reference.file, 
+preprocessIntervals(intervals, reference.file, 
     mappability=mappability, output.file = "ex2_gc_file.txt")
 @
 
@@ -159,7 +159,7 @@ symbols using the \Rfunction{annotateTargets} function.
 
 The \Rfunction{calculateBamCoverageByInterval} function can be used to generate
 the required coverage data from BAM files. All we need to do is providing the
-desired intervals (as generated by \Rfunction{calculateGCContentByInterval}):
+desired intervals (as generated by \Rfunction{preprocessIntervals}):
 
 <<examplecoverage>>=
 bam.file <- system.file("extdata", "ex1.bam", package="PureCN", 
